Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14705

Previously expanded items lose their "+" when changing a setting

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 3.5.0-rc1
    • Qt Creator 3.4.0, Qt Creator 3.5.0-beta1
    • Debugger
    • None
    • Windows, Linux
    • 6c4c8b8a9490672f78c85aca35073f8157d85f02

    Description

      struct Foo
      {
          int foo;
      };
      
      int main()
      {
          Foo foo1;
          Foo foo2;
          Foo foo3;
          Foo foo4;
          return 0; // Break here
      }
      • Expand and collapse foo3.
      • Right-click L&E -> Toggle any option (Use Debugging Helpers, Sort Members etc.)
      • foo3 is no longer expandable...

      The same behavior is observed with 3.4 (didn't test with earlier versions), except Sort Members, which causes the entire L&E to be cleared.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes